<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BeerLover</string>
    <string name="welcomeText">Bienvenue sur BeerLover !</string>
    <string name="fiveLastText">5 bières au hasard :</string>
    <string name="listButtonText">Accéder à la liste</string>
    <string name="ownListButtonText">Ma liste perso</string>
    <string name="new_text">New Text</string>
    <string name="no_entry">No entry!</string>
    <string name="filter">Filtrer</string>
    <string name="about">\?</string>
    <string name="register">Enregistrez-vous et conservez vos préférences !</string>
    <string name="email">Email</string>
    <string name="nickname">Pseudo</string>
    <string name="send">Envoyer</string>
</resources>
